{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 349,
  "lineage": "26d7d991-e835-c522-7e7b-732afc00bff7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_static_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.64.132.9",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-22T21:05:50.151-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast3/addresses/vpn-static-ip1",
            "name": "vpn-static-ip1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fleet-fortress-366707",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/addresses/vpn-static-ip1",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-esp",
              "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-udp4500",
              "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-udp500"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "vpn_static_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.97.37.219",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-11-22T21:05:51.007-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast2/addresses/vpn-static-ip2",
            "name": "vpn-static-ip2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "fleet-fortress-366707",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/addresses/vpn-static-ip2",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-esp",
              "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-udp4500",
              "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-udp500"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "network1-allow-network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-11-22T21:05:50.009-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-fortress-366707/global/firewalls/network1-allow-network1",
            "log_config": [],
            "name": "network1-allow-network1",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/networks/network1",
            "priority": 1000,
            "project": "fleet-fortress-366707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/firewalls/network1-allow-network1",
            "source_ranges": [
              "10.178.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "network1-allow-network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2022-11-22T21:05:50.039-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fleet-fortress-366707/global/firewalls/network1-allow-network2",
            "log_config": [],
            "name": "network1-allow-network2",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/networks/network1",
            "priority": 1000,
            "project": "fleet-fortress-366707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/firewalls/network1-allow-network2",
            "source_ranges": [
              "10.174.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr1_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-11-22T21:06:03.901-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-esp",
            "ip_address": "34.64.132.9",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr1-esp",
            "network_tier": "PREMIUM",
            "project": "fleet-fortress-366707",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/targetVpnGateways/vpn1"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip1",
            "google_compute_network.network1",
            "google_compute_vpn_gateway.target_gateway1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr1_udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-11-22T21:06:04.155-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-udp4500",
            "ip_address": "34.64.132.9",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr1-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500",
            "project": "fleet-fortress-366707",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/targetVpnGateways/vpn1"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip1",
            "google_compute_network.network1",
            "google_compute_vpn_gateway.target_gateway1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr1_udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-11-22T21:06:04.794-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-udp500",
            "ip_address": "34.64.132.9",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr1-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500",
            "project": "fleet-fortress-366707",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/forwardingRules/fr1-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/targetVpnGateways/vpn1"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip1",
            "google_compute_network.network1",
            "google_compute_vpn_gateway.target_gateway1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr2_esp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-11-22T21:06:04.911-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-esp",
            "ip_address": "34.97.37.219",
            "ip_protocol": "ESP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr2-esp",
            "network_tier": "PREMIUM",
            "project": "fleet-fortress-366707",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-esp",
            "target": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/targetVpnGateways/vpn2"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip2",
            "google_compute_network.network2",
            "google_compute_vpn_gateway.target_gateway2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr2_udp4500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-11-22T21:06:05.461-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-udp4500",
            "ip_address": "34.97.37.219",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr2-udp4500",
            "network_tier": "PREMIUM",
            "port_range": "4500",
            "project": "fleet-fortress-366707",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-udp4500",
            "target": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/targetVpnGateways/vpn2"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip2",
            "google_compute_network.network2",
            "google_compute_vpn_gateway.target_gateway2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "fr2_udp500",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2022-11-22T21:06:05.626-08:00",
            "id": "projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-udp500",
            "ip_address": "34.97.37.219",
            "ip_protocol": "UDP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "fr2-udp500",
            "network_tier": "PREMIUM",
            "port_range": "500",
            "project": "fleet-fortress-366707",
            "region": "asia-northeast2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/forwardingRules/fr2-udp500",
            "target": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/targetVpnGateways/vpn2"
          },
          "dependencies": [
            "google_compute_address.vpn_static_ip2",
            "google_compute_network.network2",
            "google_compute_vpn_gateway.target_gateway2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fleet-fortress-366707/global/networks/network1",
            "mtu": 0,
            "name": "network1",
            "project": "fleet-fortress-366707",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/networks/network1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fleet-fortress-366707/global/networks/network2",
            "mtu": 0,
            "name": "network2",
            "project": "fleet-fortress-366707",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/networks/network2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/24",
            "id": "projects/fleet-fortress-366707/global/routes/route1",
            "name": "route1",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/networks/network1",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast3/vpnTunnels/tunnel1",
            "priority": 1000,
            "project": "fleet-fortress-366707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/routes/route1",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.vpn_static_ip2",
            "google_compute_forwarding_rule.fr1_esp",
            "google_compute_forwarding_rule.fr1_udp4500",
            "google_compute_forwarding_rule.fr1_udp500",
            "google_compute_network.network1",
            "google_compute_vpn_gateway.target_gateway1",
            "google_compute_vpn_tunnel.tunnel1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/24",
            "id": "projects/fleet-fortress-366707/global/routes/route2",
            "name": "route2",
            "network": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/networks/network2",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/regions/asia-northeast2/vpnTunnels/tunnel2",
            "priority": 1000,
            "project": "fleet-fortress-366707",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fleet-fortress-366707/global/routes/route2",
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_address.vpn_static_ip1",
            "google_compute_forwarding_rule.fr2_esp",
            "google_compute_forwarding_rule.fr2_udp4500",
            "google_compute_forwarding_rule.fr2_udp500",
            "google_compute_network.network2",
            "google_compute_vpn_gateway.target_gateway2",
            "google_compute_vpn_tunnel.tunnel2"
          ]
        }
      ]
    }
  ]
}